Release 0.6
- Upgrade to new stog and xtmpl
- Modify vocabulary:
  + Grdfs.genet_useversion replaced by Grdfsusetoolversion, to link
    instchain to tool version.
  + new class Grdfs.genet_port
  + new class Grdfs.genet_flatopn

0.5:
- Upgrade to OCaml-RDF 0.7.0 .
- Configuration field formerly called "engine" is now called "storage"
  and the "engine" field can be used according to OCaml-RDF backends.

0.4:
fix: remove module Rdf_sparql to compile with ocaml-rdf

0.3:
add: 'make install' now also installs genet libraries
add: allow definition of predefined diff commands ('genet add diff-command')
mod: web intf: in "Diffs" tab, allow selection of one predefined diff command
mod: "genet exec" now prints the list of instanciated chains on stdout,
     and execution report on stderr
add: display creation date in version list
add: "out files" tab now contains a form to display diffs between two selected
     instanciation chains
add: "genet exec" --force option: remove previously instanciated chain to
     re-execute. Useful in manual mode, when setting up interfaces.
fix: verify syntactic correctness of filetype names before adding
fix: various error handling
mod: "genet init-dir" now creates a default configuration file in the
     given project directory; update doc accordingly
mod: when an interface takes a directory in output parameter, the
     directory is created before calling the interface

0.2:
fix: fix handling of explode/implode ("foreach" construction)
add: use type system to ensure use of absolute filenames
add: "genet query fchains"
add: "genet query inputs"
add: "genet query chains"
add: "genet query ichains"
fix: "genet query filetypes" outputs to stdout instead of stderr
add: bash completion script (website/genet-bash-completion.sh)
mod: genet-exec is replaced by subcommand exec of genet
mod: genet-diff is replaced by subcommand diff of genet
mod: genet-query is replaced by subcommand query of genet