@@ -1,3 +1,7 @@
+Next release:
+- do not require camlp4
+- replace deprecated or operator
+
 Release 0.6
 - Upgrade to new stog and xtmpl
 - Modify vocabulary:
